PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phoromatic: Allow custom versions to be manually specified on test suite web UI page
- pts_Graph: Show min/max results on multi-way comparisons

Phoronix Test Suite 6.4.0-Hasvik
2 June 2016

[Only minor changes since 6.4 M4]

Phoronix Test Suite 6.4.0 Milestone 4
31 May 2016

- pts-core: Automatically add used extra OpenBenchmarking.org repositories to the linked list
- pts-core: Don't load empty tests on finish-run command
- pts-core: Add perl-digest-md5 to external dependencies list
- pts-core: Prevent duplicate tests/setting combinations from entering the same test run manager queue
- pts-core: Fix for IE not scaling SVGs in the results viewer
- pts-core: Finish new pts_test_suite API, port build-suite to it
- phoromatic: Support editing and deleting tests in local suites from the Phoromatic Server UI
- phodevi: More detection improvements for NVMe devices on Linux

Phoronix Test Suite 6.4.0 Milestone 3
26 May 2016

- pts-core: XML formatting fix for non-OpenBenchmarking.org deployments
- pts-core: Do more to avoid zombie processes in stress-run manager
- pts-core: More robustness of the results parser with spaces (or lack of) near colons
- pts-core: Rewritten pts_test_suite internals
- phodevi: Support for reading AMDGPU OverDrive overclock offset
- phoromatic: Add generalized "Testing" page to Phoromatic Server
- watchdog: new PTS module for checking sensor readings to suspend/quit testing if exceeded

Phoronix Test Suite 6.4.0 Milestone 2
6 May 2016

- pts-core: Allow XML formatting from the Phoromatic Server web interface
- pts-core: Reformat stress-run log messages
- pts-core: Add "redis-server" as a potential external dependency for providing Redis
- pts-core: Statically set dynamic_run_count_on_length_or_less to 60
- pts-core: Adaptively increase regression threshold level in points_of_possible_interest() when too many results are being flagged