@@ -234,6 +234,10 @@
 			<GenericName>redis-server</GenericName>
 			<PackageName>redis</PackageName>
 		</Package>
+                <Package>
+			<GenericName>opencv</GenericName>
+			<PackageName>opencv</PackageName>
+		</Package>
 		<Package>
                         <GenericName>perl-digest-md5</GenericName>
                         <PackageName>perl-digest-md5-file perl6-digest-md5</PackageName>
